RESOLVED FIXED211912
Fix for crashes in LayoutTests related to TextMarkers in isolated tree mode.
https://bugs.webkit.org/show_bug.cgi?id=211912
Summary Fix for crashes in LayoutTests related to TextMarkers in isolated tree mode.
Andres Gonzalez
Reported 2020-05-14 11:49:23 PDT
Fix for crashes in LayoutTests related to TextMarkers in isolated tree mode.
Attachments
Patch (15.70 KB, patch)
2020-05-14 11:56 PDT, Andres Gonzalez
no flags
Andres Gonzalez
Comment 1 2020-05-14 11:56:16 PDT
EWS
Comment 2 2020-05-14 12:46:12 PDT
Committed r261706: <https://trac.webkit.org/changeset/261706> All reviewed patches have been landed. Closing bug and clearing flags on attachment 399389 [details].
Radar WebKit Bug Importer
Comment 3 2020-05-14 12:47:13 PDT
Note You need to log in before you can comment on or make changes to this bug.